Fixed pointer being visible during the game

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,8 @@ text {
     user-select: none;
 }
 
-#play_btn:hover {
+#play_btn:hover,
+#play_again_btn:hover,
+#play_again_btn_2:hover {
     cursor: pointer;
 }
